@@ -67,6 +67,7 @@ f06ae7f3f790fbf0f018f6d40e844451e6bc3b7bc96e128e63b09825c1f8b29f  gcc-6.3.0.tar.
 8a8136c235f64c6fef69cac0d73a46a1a09bb250776a050aec8f9fc880bebc17  gcc-7.1.0.tar.bz2
 196c3c04ba2613f893283977e6011b2345d1cd1af9abeac58e916b1aab3e0080  gcc-8.2.0.tar.xz
 64baadfe6cc0f4947a84cb12d7f0dfaf45bb58b7e92461639596c21e02d97d2c  gcc-8.3.0.tar.xz
+ea6ef08f121239da5695f76c9b33637a118dcf63e24164422231917fa61fb206  gcc-9.2.0.tar.xz
 f46b5944a8cabc8516673f231f466131cdfd2cdc6677dbee5d96ec7fc58a3340  gdal-1.11.1.tar.gz
 52f01bda8968643633016769607e6082a8ba1c746fadc2c1abe12cf7dc8f61dd  gdal-2.2.3.tar.gz
 e1c1ced9c5bc8f93ef0faf0a8c7717abf784d10a7b270d2285e8e1f3b93f2bed  giflib-4.1.6.tar.bz2
